# smart-home-ai-brain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  VERSION  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: devices.example.yaml  settings.example.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/images/: banner.html
examples/: basic_usage.py
scripts/: setup.sh
src/smart_home_brain/: __init__.py  main.py
src/smart_home_brain/ai/: __init__.py  llm_client.py
src/smart_home_brain/api/routes/: __init__.py  chat.py  devices.py  health.py
src/smart_home_brain/core/: __init__.py  device_manager.py  messaging.py  pattern_learner.py
tests/: __init__.py  test_device_manager.py  test_llm_client.py  test_messaging.py  test_pattern_learner.py
